Add Tailwind CSS integration and update favicon structure

--- a/src/app/page/main/main.component.html
+++ b/src/app/page/main/main.component.html
@@ -1,1 +1,7 @@
-<app-body [Employees]="employees" (newEmployeeClick)="PostChildData($event)" (editEmployeeClick)="UpdateChildData($event)" (deleteEmployeeClick)="DeleteChildData($event)"></app-body>
+<app-body 
+  [Employees]="employees" 
+  (newEmployeeClick)="PostChildData($event)" 
+  (editEmployeeClick)="UpdateChildData($event)" 
+  (deleteEmployeeClick)="DeleteChildData($event)">
+
+</app-body>
