--- a/src/app/pages/employees/employees.component.html
+++ b/src/app/pages/employees/employees.component.html
@@ -2,5 +2,6 @@
   <app-table
     [data]="myEmployees"
     [headers]="headers"
-    [fields]="fields"></app-table>
+    [fields]="fields">
+  </app-table>
 </section>
