--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,5 +1,5 @@
-<section class="h-[450px] w-[400px] bg-[#252525] shadow-md">
-  <div  class="h-[280px] w-[100%] bg-[#252525] grid place-items-center crop rounded-t-2xl">
+<section class="h-[450px] w-[380px] bg-[#252525] shadow-md">
+  <div  class="h-[280px] w-[100%] bg-[#b8c0cf] grid place-items-center crop">
     <img [src]="'images/joby-profile-image.svg'" alt="joby"/>
   </div>
   <div class="bg-[#e9e9e9] h-[calc(100%-280px)] p-5 text-poppins flex flex-col justify-between">
