--- a/src/app/pages/employees/employees.component.html
+++ b/src/app/pages/employees/employees.component.html
@@ -1,7 +1,9 @@
-<section class="h-[calc(100vh-64px)] bg-[#ffffffe3] p-4">
-  <app-table
-    [data]="myEmployees"
-    [headers]="headers"
-    [fields]="fields">
-  </app-table>
+<section class="h-[calc(100vh-64px)] bg-[#252525] p-10">
+  <div>
+    <app-table
+      [data]="myEmployees"
+      [headers]="headers"
+      [fields]="fields">
+    </app-table>
+  </div>
 </section>
