--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -1,17 +1,17 @@
-<table class="w-full text-left table-fixed min-w-max shadow shadow-gray-400 overflow-hidden">
+<table class="w-full text-left table-fixed min-w-max shadow shadow-gray-400 overflow-hidden bg-[#dddddd]">
   <thead>
-    <tr class="border-b border-slate-300 bg-[#593370] text-white">
+    <tr class="border-b border-[#8d98ad] text-[#3e415a] bg-[#b8c0cf]">
       <th *ngFor="let header of headers"
-        class="p-4 text-sm font-normal leading-none ">
+        class="p-4 text-sm font-black leading-none border border-slate-200">
         {{header}}
       </th>
     </tr>
   </thead>
   <tbody>
     <tr *ngFor="let item of data" 
-      class="hover:bg-slate-50 text-wrap">
+      class="hover:bg-slate-50 text-wrap border border-slate-200">
       <td *ngFor="let field of fields" 
-        class="p-4 border-b border-slate-200 py-5 break-words whitespace-normal">
+        class="p-4 border border-slate-200 py-5 break-words whitespace-normal">
         <p class="block font-semibold text-sm text-slate-800 ">
           {{item[field]}}
         </p>
