--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,8 +1,8 @@
-<section class="h-[calc(100vh-64px)] flex flex-col justify-center place-items-center bg-[#ffffffe3]">
-  <h1 class="md:place-self-center place-self-start my-5 mx-7 text-[#c45c20] text-4xl 
+<section class="h-[calc(100vh-64px)] flex flex-col justify-center place-items-center bg-[#252525]">
+  <!-- <h1 class="md:place-self-center place-self-start my-5 mx-7 text-[#c45c20] text-4xl 
     italic font-bold animate-bounce drop-shadow-lg">
     Thank you!
-  </h1>
+  </h1> -->
   <app-card
     [title]="'Tyrion Lannister'"
     [subtitle]="'Most Efficient Employee'"
