--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -4,7 +4,7 @@
     Thank you!
   </h1> -->
   <app-card
-    [title]="'Tyrion Lannister'"
+    [title]="'John Wayne'"
     [subtitle]="'Most Efficient Employee'"
     [contentBody]="`Don't wish it were easier, wish you were better.`">
   </app-card>
