--- a/src/app/components/modals/modals.component.html
+++ b/src/app/components/modals/modals.component.html
@@ -5,18 +5,19 @@
     <h2 class="text-xl font-semibold mb-4">Add Employee</h2>
     <!-- <p class="mb-4 text-gray-600">Input employee details</p> -->
     <div class="flex flex-col justify-end">
-      <app-form
+      <app-form #form
+        [formGroup]="formGroup"
         [headers]="headers"
         [fields]="fields">
       </app-form>
       <div class="place-self-end">
-        <button class="bg-gray-300 hover:bg-gray-400 text-gray-800 py-2 px-4 rounded mr-2"
+        <button class="hover:bg-red-400 hover:text-white bg-red-50 border border-red-400 text-gray-800 py-2 px-4 rounded mr-2"
           (click)="close()">
           Cancel
         </button>
         <button class="bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded"
-          (click)="save()">
-          Confirm
+          (click)="addEmployee(); form.submitForm()">
+          Add Employee
         </button>
       </div>
     </div>
