--- a/src/app/pages/employees/employees.component.html
+++ b/src/app/pages/employees/employees.component.html
@@ -1,5 +1,5 @@
-<section class="h-[calc(100vh-64px)] bg-[#252525] p-10">
-  <app-table
+<section class="h-[calc(100vh-64px)] bg-[#252525]">
+  <app-table class="border"
     [data]="employeeState$ | async"
     [headers]="headers"
     [fields]="fields">
